# RSC2025-YangPentingKumpul

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_controller/lib/drone_controller/: simulation_service
install/drone_controller/share/ament_index/resource_index/parent_prefix_path/: drone_controller
install/drone_controller/share/drone_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_controller/share/drone_controller/cmake/: drone_controllerConfig.cmake
install/map_manager/include/map_manager/map_manager/msg/: map_state.h  map_state.hpp  rosidl_generator_c__visibility_control.h  (+1 more)
install/map_manager/lib/map_manager/: add_obstacle  add_victim  map_publish  map_subscribe
install/map_manager/share/map_manager/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/map_manager/share/map_manager/cmake/: ament_cmake_export_dependencies-extras.cmake  export_map_manager__rosidl_generator_cExport-noconfig.cmake  export_map_manager__rosidl_generator_pyExport.cmake  map_managerConfig.cmake  map_manager__rosidl_typesupport_cExport-noconfig.cmake  map_manager__rosidl_typesupport_cExport.cmake  map_manager__rosidl_typesupport_introspection_cExport-noconfig.cmake  map_manager__rosidl_typesupport_introspection_cppExport-noconfig.cmake  map_manager__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/map_manager/share/map_manager/msg/: MapState.idl
install/map_manager/share/map_manager/srv/: AddObstacle.idl  AddObstacle_Request.msg  AddVictim.idl
log/: latest_build  latest_list
src/drone_controller/: CMakeLists.txt  package.xml
src/drone_controller/src/: energy_subscriber_function.cpp  simulation_service.cpp
src/map_manager/: CMakeLists.txt
src/map_manager/src/: add_obstacle.cpp  add_victim.cpp  map_publisher_function.cpp  map_subscriber_function.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/src/: dstar_algorithm.cpp  dstar_planner.cpp
src/path_planner/srv/: StartSimulation.srv
(+30 files in other folders)
